# edumaze-player

./: README.md  conftest.py  pyproject.toml
.claude/skills/check-site/: SKILL.md
.claude/skills/explore-site/: SKILL.md
docs/: architecture.md
edumaze/: __init__.py  budgets.py  cases.py  checks.py  cli.py  engine.py  matcher.py  materialize.py  model.py  node.py  oracles.py  page.py  player.py  policy.py  report.py  role.py  site.py  strategy.py
edumaze/drivers/: fake.py  playwright_driver.py
sites/edumaze/: map.py  maze.py
sites/healthjoy/: maze.py
sites/saucedemo/: map.py
sites/theinternet/: map.py
tests/: example_map.py  example_maze.py  test_engine.py  test_fuzz.py  test_locators.py  test_matcher.py  test_materialize.py  test_player.py  test_policy.py  test_strategy.py
tools/: probe.py
